examples/test/testpolicy5755.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5755
  namespace: namespace181
spec:
  podSelector:
    matchLabels:
      key13: value31
      key22: value16
      key36: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value32
      podSelector:
        matchLabels:
          key44: value40
          key11: value46
